err/django-threaded-messages.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_threaded_messages-0.1.36.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/threaded_messages'...
Listing './lib/python3.5/site-packages/threaded_messages/locale'...
Listing './lib/python3.5/site-packages/threaded_messages/locale/de'...
Listing './lib/python3.5/site-packages/threaded_messages/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/threaded_messages/locale/en'...
Listing './lib/python3.5/site-packages/threaded_messages/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/threaded_messages/locale/es'...
Listing './lib/python3.5/site-packages/threaded_messages/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/threaded_messages/locale/fr'...
Listing './lib/python3.5/site-packages/threaded_messages/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/threaded_messages/locale/it'...
Listing './lib/python3.5/site-packages/threaded_messages/locale/it/LC_MESSAGES'...
Compiling './lib/python3.5/site-packages/threaded_messages/management.py'...
***   File "./lib/python3.5/site-packages/threaded_messages/management.py", line 11
    print "Skipping creation of NoticeTypes (Threaded Messages) as notification app not found"
                                                                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/threaded_messages/migrations'...
Listing './lib/python3.5/site-packages/threaded_messages/static'...
Listing './lib/python3.5/site-packages/threaded_messages/static/css'...
Listing './lib/python3.5/site-packages/threaded_messages/static/js'...
Listing './lib/python3.5/site-packages/threaded_messages/templates'...
Listing './lib/python3.5/site-packages/threaded_messages/templates/django_messages'...
Listing './lib/python3.5/site-packages/threaded_messages/templatetags'...
Compiling './lib/python3.5/site-packages/threaded_messages/templatetags/inbox.py'...
***   File "./lib/python3.5/site-packages/threaded_messages/templatetags/inbox.py", line 41
    raise TemplateSyntaxError, "inbox_count tag takes either no arguments or exactly two arguments"
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/threaded_messages/views.py'...
***   File "./lib/python3.5/site-packages/threaded_messages/views.py", line 280
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
